# senior-design

./: .gitattributes  .gitignore  Bio_Rodriguez.md  LICENSE  Milestones.md  Project-Description.md  Project_Description.md  README.md  Tasklist.md  Timeline.md  User-Stories.md  User_Stories.md  compose.yaml  example.env  microservice.md  msg.proto  refactor.md  run.sh  server.go  service.proto
Design_Diagrams/: Design_Diagram.odp  Design_Diagram.pptx
Design_Diagrams/Source/: D2.drawio  Design_Diagram.odp
Essays/Source/: capstone-assessment-gr.odt  constraints-essay-gr.odt  team-contract-gr.odt
Presentations/Source/: Midterm_Presentation.odp
Python/: .gitignore  .pylintrc  README.md  TODO.md  diagram.json  environment.yml  wokwi.toml  ws_client.py
Python/app/: main.py  ws_client.py
Python/app/controllers/: control_panel.py  dashboard.py
Python/app/static/: index.html
Python/board/: boot.py  common.py  main.py  upload.py
Python/domain/: common.py  example_hidden.py
Python/mqtt/: client.py  ota_update.py  server.py  test_client.py
Python/src/: TODO.md  asyncio_queue_demo.py
Python/src/mqtt/: client.py  server.py
Python/src/quart/: webserver.py
Python/src/sim/: main.py  ugit.py  upload.py
Python/web/: webserver.py
Python/web/templates/: index.html
Python/wokwi/: .pylintrc  diagram.json  micropy.json
Python/wokwi/src/: upload.py
Rust/mqtt/: Cargo.toml
Rust/mqtt/src/: lib.rs
Rust/sse/src/: main.rs
Rust/sse/static/: index.html
api/: .gitignore  Dockerfile  README.md  api.proto  go.mod  go.sum  main.go
api/client/: README.md  pyproject.toml
api/client/client/: api_pb2.pyi  api_pb2_grpc.py  example_config.py  main.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
api/grpc_client/: README.md  pyproject.toml
api/grpc_client/grpc_client/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py  main.py
api/grpc_server/: CMakeLists.txt  README.md  conanfile.txt  run.sh
api/grpc_server/include/: api.grpc.pb.h  api.pb.h  config.h  service.h
api/grpc_server/src/: api.pb.cc  main.cc  service_callbacks.cc  service_utils.cc
api/server/: CMakeLists.txt  NOTES.md  README.md  api.proto  conanfile.txt
api/server/include/: api.grpc.pb.h  api.pb.h  example_config.h
api/server/src/: api.grpc.pb.cc  main.cc
api/service/: service.pb.go  service_grpc.pb.go
batch-router/: Dockerfile  go.mod  go.sum  main.go
batch-router/callbacks/: callbacks.go
batch-router/server/: constants.go  routines.go  server.go  types.go
broker/: .gitignore  Dockerfile  README.md  create_users.sh  entrypoint.sh  mosquitto.conf  rabbitmq.conf
broker/scripts/: init.sh  perms.sh  queues.sh  users.sh
client/: Dockerfile  go.mod  go.sum  main.go
client/msg/: msg.pb.go
clock/: Dockerfile  go.mod  go.sum  main.go
database/: .gitignore  Dockerfile  README.md  example.env  postgres.conf
docs/: bio-rodriguez.md  design-diagrams.md  design_diagrams.md  milestones.md  project-description.md  project_description.md  tasklist.md  test-plan.md  test_plan.md  timeline.md  user-stories.md
docs/design_diagrams/: test.md
docs/design_diagrams/source/: D0.drawio  D1.drawio  D2.drawio
docs/essays/: final-capstone-assessment.md
docs/essays/source/: capstone-assessment-gr.odt
docs/presentations/: Midterm_Presentation.odp  fall-design-slides.odp  final-presentation.odp
docs/presentations/source/: D0-Min.drawio  D1-Min.drawio  D2-Min.drawio
fails/: README.md
fails/no_std/: Cargo.toml  wokwi.toml
fails/no_std/.cargo/: config.toml
fails/no_std/.devcontainer/: Dockerfile  devcontainer.json
fails/no_std/docs/: README.md
fails/no_std/scripts/: flash.sh
fails/no_std/src/: main.rs  old.rs
fails/std/: Cargo.toml
fails/std/.devcontainer/: Dockerfile  devcontainer.json
fails/std/scripts/: multi_flash.sh  qemu_install.sh
fails/std/src/: main.rs
firmware/: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml  cfg.toml.example  config.toml  mqtt_msg.proto  msg.proto  platformio.ini  sdkconfig.esp32dev
firmware/.cargo/: config.toml
firmware/.devcontainer/: devcontainer.json
firmware/include/: example_config.h  mqtt_init.h  msg.pb-c.h
firmware/scripts/: flash.sh  multi_flash.sh  qemu_run.sh  save_images.sh
firmware/src/: CMakeLists.txt  example_config.h  main.c  main.rs  mqtt_init.c  mqtt_msg.pb-c.c  mqtt_msg.pb-c.h  msg.pb-c.c  msg.rs  net_init.c  net_init.h
legacy/Python/: .gitignore  PuTTY.txt  README.md  TODO.md  micropy.json  settings.toml  upload.py  wokwi.toml
legacy/Python/app/: main.py
legacy/Python/board/: boot.py
legacy/Python/mqtt/: server.py
legacy/Rust/websocket/: README.md
mqtt-ex/: Cargo.toml
mqtt-ex/examples/: mqtt.rs
mqtt-ex/src/: lib.rs
mqtt-network/: Cargo.toml
mqtt-network/src/: messages.rs
mqtt/src/: messages.rs
old/api/grpc_server/: Dockerfile  example.env
old/firmware/: .gitignore  CMakeLists.txt  diagram.json  sdkconfig.esp32dev  wokwi.toml
old/firmware/src/: mqtt_init.c
old/server/: .gitignore  CMakeLists.txt  Dockerfile  README.md
old/server/include/: config.h  msg.pb.h
proxy/: Dockerfile  go.mod  go.sum  main.go
redis/: Dockerfile  redis.conf
server/: .gitignore  CMakeLists.txt  Dockerfile  MODULE.bazel  Makefile  README.md  conanfile.txt  example.env  example_config.h  msg.pb.h  msg.proto
server/client/: BUILD  client.cc  config.h  main.cc
server/clock/: BUILD  config.h  main.cc
server/include/: config.h  msg.pb.h  server.h  server_cb.h
server/main/: main.cc
server/msg_def/: BUILD  CMakeLists.txt  README.md  msg.pb.cc  msg.pb.h  msg.proto
server/server/: BUILD  callbacks.cc  callbacks.h  config.h  main.cc
server/src/: client.cc  clock.cc  example_config.h  msg.pb.cc  msg.proto  server.cc  server_callbacks.cc  server_cb.cc  server_utils.cc
server/src/client/: main.cc
server/src/clock/: main.cc
server/src/server/: callbacks.cc  main.cc
server/test_package/: conanfile.py
sse/: Cargo.toml
sse/src/: main.rs
sse/static/: kitty.html
webserver/: Cargo.toml
webserver/src/: session.rs
websocket/: Cargo.toml  server_concept.py  ws_client.py
(+19 files in other folders)
