[package]
name = "firmware"
version = "0.1.0"
authors = ["GR <rodrigg2@mail.uc.edu>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.2"
toml-cfg = "0.2.0"
embedded-dht-rs = { version = "0.4.0", features = ["dht22"] }
micropb = {version = "0.1.0", features = ["container-heapless"]}

[build-dependencies]
embuild = "0.33"
micropb-gen = "0.1.0"

[dev-dependencies]
toml-cfg = "0.2.0"
