[package]
name = "mqtt-ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23.0"

[[bin]]
name = "client"
path = "src/bin/mqtt/client.rs"

[[bin]]
name = "server"
path = "src/bin/mqtt/server.rs"

[[bin]]
name = "webserver"
path = "src/bin/webserver.rs"