[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-broker = "0.4.3"
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
env_logger = "0.10.0"
log = "0.4.20"
tokio = "1.33.0"

[[bin]]
name = "websocket-server"
path = "src/main.rs"
