[package]
name = "firmware"
version = "0.1.0"
authors = ["GR <rodrigg2@mail.uc.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.6.1", features = ["task-arena-size-65536"] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-time = "0.3.2"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-tls = { version = "0.17.0", default-features = false, features = [
    "alloc",
] }
esp-alloc = { version = "0.5.0" }
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = ["esp32"] }
esp-hal-embassy = { version = "0.4.0", features = [
    "esp32",
    "integrated-timers",
] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.10.1", features = [
    "esp32",
    "async",
    "embassy-net",
    "utils",
    "wifi",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.22" }
rust-mqtt = { version = "0.3.0", default-features = false }
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
