[package]
name = "firmware"
version = "0.1.0"
authors = ["GR <rodrigg2@mail.uc.edu>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "firmware"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
rust-mqtt = "0.3.0"
rustls-rustcrypto = "0.0.2-alpha"
tokio = { version = "1.41.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "logging",
    "tls12",
] }

[build-dependencies]
embuild = "0.32.0"
